--- a/oficialia/src/app/pages/acuse/acuse.component.html
+++ b/oficialia/src/app/pages/acuse/acuse.component.html
@@ -58,123 +58,112 @@
         </mat-form-field>
       </div>
 
-     <!-- Tabla de acuses -->
-<div *ngIf="dataSource.data.length > 0" class="table-container">
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 styled-table">
+      <!-- Tabla de acuses -->
+      <div *ngIf="dataSource?.data?.length > 0" class="table-container">
+        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 styled-table">
 
-    <!-- ID -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-    </ng-container>
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
+          </ng-container>
 
-    <!-- Fecha -->
-    <ng-container matColumnDef="fecha">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha</th>
-      <td mat-cell *matCellDef="let element">{{ element.fecha }}</td>
-    </ng-container>
+          <ng-container matColumnDef="fecha">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+            <td mat-cell *matCellDef="let element"> {{ element.fecha }} </td>
+          </ng-container>
 
-    <!-- Documento -->
-    <ng-container matColumnDef="documento">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Documento</th>
-      <td mat-cell *matCellDef="let element">{{ element.documento }}</td>
-    </ng-container>
+          <ng-container matColumnDef="documento">
+            <th mat-header-cell *matHeaderCellDef> Documento </th>
+            <td mat-cell *matCellDef="let element"> {{ element.documento }} </td>
+          </ng-container>
 
-    <!-- Asunto -->
-    <ng-container matColumnDef="asunto">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Asunto</th>
-      <td mat-cell *matCellDef="let element">{{ element.asunto }}</td>
-    </ng-container>
+          <ng-container matColumnDef="asunto">
+            <th mat-header-cell *matHeaderCellDef> Asunto </th>
+            <td mat-cell *matCellDef="let element"> {{ element.asunto }} </td>
+          </ng-container>
 
-    <!-- Remitido -->
-    <ng-container matColumnDef="remitido">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Remitido</th>
-      <td mat-cell *matCellDef="let element">{{ element.remitido }}</td>
-    </ng-container>
+          <ng-container matColumnDef="remitido">
+            <th mat-header-cell *matHeaderCellDef> Remitido </th>
+            <td mat-cell *matCellDef="let element"> {{ element.remitido }} </td>
+          </ng-container>
 
-    <!-- Turnado -->
-    <ng-container matColumnDef="turnado">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Turnado</th>
-      <td mat-cell *matCellDef="let element">{{ element.turnado }}</td>
-    </ng-container>
+          <ng-container matColumnDef="turnado">
+            <th mat-header-cell *matHeaderCellDef> Turnado </th>
+            <td mat-cell *matCellDef="let element"> {{ element.turnado }} </td>
+          </ng-container>
 
-    <!-- Indicación -->
-    <ng-container matColumnDef="indicacion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Indicación</th>
-      <td mat-cell *matCellDef="let element">{{ element.indicacion }}</td>
-    </ng-container>
+          <ng-container matColumnDef="indicacion">
+            <th mat-header-cell *matHeaderCellDef> Indicación </th>
+            <td mat-cell *matCellDef="let element"> {{ element.indicacion }} </td>
+          </ng-container>
 
-    <!-- Encabezados y filas -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+          <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button (click)="imprimir(element)">
+                <mat-icon>print</mat-icon>
+              </button>
+            </td>
+          </ng-container>
 
-  <mat-paginator
-    [pageSize]="3"
-    [pageSizeOptions]="[3]"
-    showFirstLastButtons
-  ></mat-paginator>
-</div>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
 
+        <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
 
       <!-- Formulario de nuevo acuse -->
-  <mat-card class="acuse-form-card pro-form">
-  <mat-card-header>
-    <mat-card-title>📄 Nuevo Acuse</mat-card-title>
-  </mat-card-header>
+      <mat-card class="acuse-form-card pro-form">
+        <mat-card-content>
+          <form (ngSubmit)="saveAcuse()">
+            <div class="form-grid-pro">
+              <mat-form-field appearance="outline" class="form-field-pro">
+                <mat-label>Fecha</mat-label>
+                <input matInput type="date" [(ngModel)]="acuseForm.fecha" name="fecha" required />
+              </mat-form-field>
 
-  <mat-card-content>
-    <form (ngSubmit)="saveAcuse()">
-      <div class="form-grid-pro">
-        <mat-form-field appearance="outline" class="form-field-pro">
-          <mat-label>Fecha</mat-label>
-          <input matInput type="date" [(ngModel)]="acuseForm.fecha" name="fecha" required />
-        </mat-form-field>
-        
+              <mat-form-field appearance="outline" class="form-field-pro">
+                <mat-label>Documento</mat-label>
+                <input matInput [(ngModel)]="acuseForm.documento" name="documento" required />
+              </mat-form-field>
 
-        <mat-form-field appearance="outline" class="form-field-pro">
-          <mat-label>Documento</mat-label>
-          <input matInput [(ngModel)]="acuseForm.documento" name="documento" required />
-        </mat-form-field>
+              <mat-form-field appearance="outline" class="form-field-pro">
+                <mat-label>Asunto</mat-label>
+                <input matInput [(ngModel)]="acuseForm.asunto" name="asunto" required />
+              </mat-form-field>
 
-        <mat-form-field appearance="outline" class="form-field-pro">
-          <mat-label>Asunto</mat-label>
-          <input matInput [(ngModel)]="acuseForm.asunto" name="asunto" required />
-        </mat-form-field>
+              <mat-form-field appearance="outline" class="form-field-pro">
+                <mat-label>Remitido</mat-label>
+                <input matInput [(ngModel)]="acuseForm.remitido" name="remitido" required />
+              </mat-form-field>
 
-        <mat-form-field appearance="outline" class="form-field-pro">
-          <mat-label>Remitido</mat-label>
-          <input matInput [(ngModel)]="acuseForm.remitido" name="remitido" required />
-        </mat-form-field>
+              <mat-form-field appearance="outline" class="form-field-pro">
+                <mat-label>Turnado</mat-label>
+                <input matInput [(ngModel)]="acuseForm.turnado" name="turnado" required />
+              </mat-form-field>
 
-        <mat-form-field appearance="outline" class="form-field-pro">
-          <mat-label>Turnado</mat-label>
-          <input matInput [(ngModel)]="acuseForm.turnado" name="turnado" required />
-        </mat-form-field>
+              <mat-form-field appearance="outline" class="form-field-pro full-width-textarea">
+                <mat-label>Indicación</mat-label>
+                <textarea
+                  matInput
+                  rows="4"
+                  [(ngModel)]="acuseForm.indicacion"
+                  name="indicacion"
+                  required
+                ></textarea>
+              </mat-form-field>
+            </div>
 
-        <mat-form-field appearance="outline" class="form-field-pro full-width-textarea">
-          <mat-label>Indicación</mat-label>
-          <textarea
-            matInput
-            rows="4"
-            [(ngModel)]="acuseForm.indicacion"
-            name="indicacion"
-            required
-          ></textarea>
-        </mat-form-field>
-      </div>
-
-      <div class="button-container-pro">
-        <button mat-raised-button color="primary" type="submit">
-          <mat-icon>send</mat-icon>
-          Generar Acuse
-        </button>
-      </div>
-    </form>
-  </mat-card-content>
-</mat-card>
-
-
+            <div class="button-container-pro">
+              <button mat-raised-button color="primary" type="submit">
+                <mat-icon>send</mat-icon>
+                Generar Acuse
+              </button>
+            </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
