--- a/oficialia/src/app/pages/oficio/oficio.component.html
+++ b/oficialia/src/app/pages/oficio/oficio.component.html
@@ -15,6 +15,9 @@
       <a mat-list-item routerLink="/oficio" routerLinkActive="active-link">
         <mat-icon>post_add</mat-icon> <span> Registro de Oficios</span>
       </a>
+      <!-- <a mat-list-item routerLink="/circular" routerLinkActive="active-link">
+        <mat-icon>sync_alt</mat-icon> <span> Generar Circular</span>
+      </a> -->
       <a mat-list-item routerLink="/user" routerLinkActive="active-link">
         <mat-icon>manage_accounts</mat-icon> <span> Permisos y Roles</span>
       </a>
@@ -31,6 +34,7 @@
       </button>
 
       <span class="toolbar-title">Sistema Integral de Oficialía de Partes</span>
+
 
       <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Icono de usuario">
         <mat-icon>account_circle</mat-icon>
@@ -80,7 +84,7 @@
           </ng-container>
 
           <ng-container matColumnDef="dependencia_des">
-            <th mat-header-cell *matHeaderCellDef> Dependencia Destino </th>
+            <th mat-header-cell *matHeaderCellDef> Area Destino </th>
             <td mat-cell *matCellDef="let oficio">{{ oficio.dependencia_des }}</td>
           </ng-container>
 
@@ -95,21 +99,7 @@
               <a *ngIf="oficio.archivo" (click)="abrirArchivo(oficio)" style="cursor: pointer;">
                 Ver Documento
               </a>
-              <span *ngIf="!oficio.archivo">No adjunto</span>
               <button mat-icon-button (click)="openFileSelector(oficio)" *ngIf="!oficio.archivo">
-                <mat-icon>attach_file</mat-icon>
-              </button>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="archivo2">
-            <th mat-header-cell *matHeaderCellDef> Respuesta</th>
-            <td mat-cell *matCellDef="let oficio">
-              <a *ngIf="oficio.archivo2" (click)="abrirArchivo2(oficio)" style="cursor: pointer;">
-                Ver Documento
-              </a>
-              <span *ngIf="!oficio.archivo2">No adjunto</span>
-              <button mat-icon-button (click)="openFileSelector2(oficio)" *ngIf="!oficio.archivo2">
                 <mat-icon>attach_file</mat-icon>
               </button>
             </td>
@@ -141,6 +131,4 @@
   </mat-sidenav-content>
 </mat-sidenav-container>
 
-<!-- Inputs ocultos para archivos -->
 <input type="file" id="fileInput" style="display: none" (change)="onFileSelected($event)" accept=".pdf,.jpg,.png" />
-<input type="file" id="fileInput2" style="display: none" (change)="onFileSelected2($event)" accept=".pdf,.jpg,.png" />
